--- a/Style.css
+++ b/Style.css
@@ -6,4 +6,49 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Pirata One', cursive;
+  
+}
+
+.header{
+  text-align: center;
+  background-color: brown;
+  margin: auto;
+}
+
+.input-box{
+  
+  display:flex;
+  
+  margin: auto;
+  margin-top: 2rem;
+  width: 30rem;
+  height: 10rem;
+  border-style: groove;
+  border-width: 0.2rem;
+  border-color: black;
+  
+}
+
+.btn{
+  display: block;
+  margin: auto;
+  margin-top: 1rem;
+  font-size: larger;
+  background-color: antiquewhite;
+  font-family: 'Pirata One', cursive;
+  
+}
+
+.output-box{
+  margin: auto;
+  display: block;
+  margin-top: 2rem;
+  border: 0.2rem;
+  border-color: black;
+  border-style: groove;
+  width: 30rem;
+  height: 10rem;
+  text-align: center;
+  font-size: xx-large;
+
 }
